Views/Dashboard: added sections titles

--- a/Shoppy/en.lproj/Localizable.strings
+++ b/Shoppy/en.lproj/Localizable.strings
@@ -9,6 +9,10 @@
 // App title
 "Shoppy" = "Shoppy";
 
+// Home
+"Statistics" = "Statistics";
+"Navigation" = "Navigation";
+
 // Errors
 "Wrong API key" = "Wrong API key";
 "Please check you filled required fields correctly." = "Please check you filled required fields correctly.";
