Views/Product+Order: added iPad text for column

--- a/Shoppy/Localization/en.lproj/Localizable.strings
+++ b/Shoppy/Localization/en.lproj/Localizable.strings
@@ -32,6 +32,10 @@
 "Query" = "Query";
 "queries" = "queries";
 
+// iPad column
+"No product selected" = "No product selected";
+"No order selected" = "No order selected";
+
 // Common
 "Save" = "Save";
 "Continue" = "Continue";
