Views/Queries: Change localization of main title

--- a/Shoppy/Localization/en.lproj/Localizable.strings
+++ b/Shoppy/Localization/en.lproj/Localizable.strings
@@ -153,6 +153,7 @@
 "Re-open this query" = "Re-open this query";
 "Close this query" = "Close this query";
 "Support" = "Support";
+"Support center" = "Support center";
 "You can still re-open it later." = "You can still re-open it later.";
 
 // Query status
