--- a/Shoppy/Localization/fr.lproj/Localizable.strings
+++ b/Shoppy/Localization/fr.lproj/Localizable.strings
@@ -154,6 +154,7 @@
 "Re-open this query" = "Ré-ouvrir la requête";
 "Close this query" = "Fermer la requête";
 "Support" = "Support";
+"Support center" = "Centre de support";
 "You can still re-open it later." = "Vous pourrez toujours la re-ouvrir plus tard.";
 
 // Query status
