Localizations: translate settings sections

--- a/Shoppy/Localization/en.lproj/Localizable.strings
+++ b/Shoppy/Localization/en.lproj/Localizable.strings
@@ -51,6 +51,9 @@
 "WELCOME ON" = "WELCOME ON";
 
 // Settings
+"API management" = "API management";
+"Source code" = "Source code";
+"Information" = "Information";
 "Settings" = "Settings";
 "Change API key" = "Change API key";
 "See the source code" = "See the source code";
