Localization: fix "accounts" mention

--- a/Shoppy/Localization/fr.lproj/Localizable.strings
+++ b/Shoppy/Localization/fr.lproj/Localizable.strings
@@ -146,6 +146,7 @@
 
 // Types
 "Account" = "Compte";
+"Accounts" = "Comptes";
 "Service" = "Service";
 "File" = "Fichier";
 "Dynamic" = "URL Dynamique";
