Localizations: re-written everything

--- a/Shoppy/Localization/en.lproj/Localizable.strings
+++ b/Shoppy/Localization/en.lproj/Localizable.strings
@@ -6,176 +6,6 @@
  Copyright © 2020 Victor Lourme. All rights reserved.
  */
 
-// App title
-"Shoppy" = "Shoppy";
-
-// Home
-"Statistics" = "Statistics";
-"Navigation" = "Navigation";
-
-// Errors
-"Wrong API key" = "Wrong API key";
-"Please check you filled required fields correctly." = "Please check you filled required fields correctly.";
-"Network is unreachable" = "Network is unreachable";
-"Your device does not have Internet connection, reload the application when you have connection back." = "Your device does not have Internet connection, reload the application when you have connection back.";
-
-// Tabs
-"Dashboard" = "Dashboard";
-"Orders" = "Orders";
-"Products" = "Products";
-
-// Tabs variations
-"Order" = "Order";
-"orders" = "orders";
-"Product" = "Product";
-"products" = "products";
-"Query" = "Query";
-"queries" = "queries";
-
-// iPad column
-"No product selected" = "No product selected";
-"No order selected" = "No order selected";
-
-// Common
-"Save" = "Save";
-"Continue" = "Continue";
-"Copy" = "Copy";
-"Done" = "Done";
-"No" = "No";
-"Yes" = "Yes";
-"Error" = "Error";
-
-// Login
-"Your API key is stored encrypted and never shared." = "Your API key is stored encrypted and never shared.";
-"Change your API key" = "Change your API key";
-"Welcome on Shoppy" = "Welcome on Shoppy";
-"Manage your commerce like never before, welcome on a easy way to manage your orders, products, customers' queries and more." = "Manage your commerce like never before, welcome on a easy way to manage your orders, products, customers' queries and more.";
-"You can find your API key in Settings on your Shoppy account." = "You can find your API key in Settings on your Shoppy account.";
-"API key" = "API key";
-
-// Settings
-"API management" = "API management";
-"Source code" = "Source code";
-"Information" = "Information";
-"Settings" = "Settings";
-"Change API key" = "Change API key";
-"See the source code" = "See the source code";
-"Report a bug" = "Report a bug";
-"Version" = "Version";
-
-// Dashboard
-"Today's earnings" = "Today's earnings";
-"Total earnings" = "Total earnings";
-"Total orders" = "Total orders";
-"10 last orders" = "10 last orders";
-
-// Orders
-"Try to load more" = "Try to load more";
-"Paid" = "Paid";
-"paid" = "paid";
-"Unpaid" = "Unpaid";
-"Cancelled" = "Cancelled";
-"Status" = "Status";
-"Created at" = "Created at";
-"Paid using" = "Paid using";
-"Paid at" = "Paid at";
-"Price" = "Price";
-"Quantity" = "Quantity";
-"Total price" = "Total price";
-"Currency" = "Currency";
-"Email" = "Email";
-"IP" = "IP";
-"Country" = "Country";
-"Platform" = "Platform";
-"Order ID" = "Order ID";
-"Product ID" = "Product ID";
-"Replacement ID" = "Replacement ID";
-"Coupon ID" = "Coupon ID";
-"Hash" = "hash";
-"Delivered accounts" = "Delivered accounts";
-"See product" = "See product";
-"See delivered products" = "See delivered products";
-"Copy email" = "Copy email";
-"Copy IP" = "Copy IP";
-"Copy product ID" = "Copy product ID";
-"Copy invoice ID" = "Copy invoice ID";
-"Order was not paid" = "Order was not paid";
-"Payment gateway" = "Payment gateway";
-"Invoice" = "Invoice";
-"Total" = "Total";
-"In" = "In";
-"using" = "using";
-
-// Products
-"Name" = "Name";
-"See the description" = "See the description";
-"Description" = "Description";
-"Delivery type" = "Delivery type";
-"Revenue per order" = "Revenue per order";
-"Potential total" = "Potential total";
-"Stock" = "Stock";
-"Minimum quantity per order" = "Minimum quantity per order";
-"Maximum quantity per order" = "Maximum quantity per order";
-"See accounts in stock" = "See accounts in stock";
-"Unlisted" = "Unlisted";
-"Creation date" = "Creation date";
-"Last update" = "Last update";
-"Select an action" = "Select an action";
-"Edit product" = "Edit product";
-"Delete product" = "Delete product";
-"Required fields" = "Required fields";
-"Name (128 chars max)" = "Name (128 chars max)";
-"Price (10.000 max)" = "Price (10.000 max)";
-"Type" = "Type";
-"Optional fields" = "Optional fields";
-"Description (10.000 chars max)" = "Description (10.000 chars max)";
-"Minimum stock" = "Minimum per order";
-"Maximum stock" = "Maximum per order";
-"Callback URL" = "Callback URL";
-"Upload files from the website" = "Upload files from the website";
-"Attachment" = "Attachments";
-"Please upload files from the website." = "Please upload files from the website.";
-"Accounts" = "Accounts";
-"Send email on purchase" = "Send email on purchase";
-"Message to send" = "Message to send";
-"Edit a product" = "Edit a product";
-"Create a product" = "Create a product";
-"in stock" = "in stock";
-"Out of stock" = "Out of stock";
-
-// Types
-"Account" = "Account";
-"Accounts" = "Accounts";
-"Service" = "Service";
-"File" = "File";
-"Dynamic" = "Dynamic";
-
-// Query
-"Tap to reply" = "Tap to reply";
-"Query detail" = "Query detail";
-"Sent date" = "Sent date";
-"Sender" = "Sender";
-"Created on" = "Created on";
-"Query ID" = "Query ID";
-"Re-open this query" = "Re-open this query";
-"Close this query" = "Close this query";
-"Support" = "Support";
-"Support center" = "Support center";
-"You can still re-open it later." = "You can still re-open it later.";
-
-// Query status
-"Open" = "Open";
-"Closed" = "Closed";
-"Replied" = "Replied";
-"User replied" = "User replied";
-
-// User
-"Profile" = "Profile";
-"Username" = "Username";
-"Not linked" = "Not linked";
-"BTC Address" = "BTC Address";
-"LTC Address" = "LTC Address";
-"ETH Address" = "ETH Address";
-"PayPal" = "PayPal";
-"Stripe ID" = "Stripe ID";
-"Your profile can be changed on the website." = "Your profile can be changed on the website.";
+//
+// English is using defaults texts in .swift files
+//
