--- a/Shoppy/Localization/fr.lproj/Localizable.strings
+++ b/Shoppy/Localization/fr.lproj/Localizable.strings
@@ -21,6 +21,12 @@
 "Support" = "Support";
 
 ///
+/// Errors
+///
+"Network issue" = "Problème de connexion";
+"You don't have network connection. Tap this card to retry." = "Vous n'avez pas de connexion à Internet, appuyez pour re-essayer.";
+
+///
 /// Dashboard
 ///
 
